forth/test/fail/test_too_many_call_args.af
\ Must fail to compile.
fun: test_too_many_call_args_fail { -- err }
  0 1 2 3 4 5 6 7 8 0 call
  nil
end
